removed boiletplate code from Index view

--- a/clubweb.client/Views/Shared/_Layout.cshtml
+++ b/clubweb.client/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - clubweb.client</p>
+            <p>&copy; 2018 - Northern NJ .Net User Group (<a href="n3ug.org">N3UG</a>)</p>
         </footer>
     </div>
 
