Fixed navigation issue

--- a/clubweb.client/Views/Shared/_DefaultLayout.cshtml
+++ b/clubweb.client/Views/Shared/_DefaultLayout.cshtml
@@ -30,9 +30,9 @@
                 <div class="module-group right">
                     <div class="module left">
                         <ul class="menu">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="/Home">Home</a></li>
+                            <li><a href="/Home/About">About</a></li>
+                            <li><a href="/Home/Contact">Contact</a></li>
                             <li class="has-dropdown">
                                 <a href="#">
                                     Admin
@@ -62,8 +62,8 @@
         </nav>
     </div>
     <div class="main-container">
-        <section class="page-title page-title-4 bg-secondary">
-            <div class="container">
+        <section>
+            <div class="container content-container">
                 <div class="row">
                     <div class="col-sm-12">
                         @RenderBody()
