Fixed Users menu item

--- a/clubweb.client/Views/Shared/_DefaultLayout.cshtml
+++ b/clubweb.client/Views/Shared/_DefaultLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Foundry Multi-purpose HTML Template</title>
+    <title>N3UG.Club.Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="~/css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
@@ -38,7 +38,7 @@
                                     Admin
                                 </a>
                                 <ul class="mega-menu">
-                                    <li><a href="#">Users</a></li>
+                                    <li><a href="/Home/Users">Users</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -133,8 +133,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <i class="ti-facebook"></i>
+                                <a href="mailto:info@n3ug.org">
+                                    <i class="ti-email"></i>
                                 </a>
                             </li>
                             <li>
