--- a/clubweb.client/Views/Shared/_DefaultLayout.cshtml
+++ b/clubweb.client/Views/Shared/_DefaultLayout.cshtml
@@ -38,7 +38,7 @@
                                     Admin
                                 </a>
                                 <ul class="mega-menu">
-                                    <li><a href="/Home/Users">Users</a></li>
+                                    <li><a href="#">Users</a></li>
                                 </ul>
                             </li>
                         </ul>
