--- a/clubweb.client/Views/Home/Contact.cshtml
+++ b/clubweb.client/Views/Home/Contact.cshtml
@@ -1,17 +1,69 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+@* You're choice to put this on Layout page *@
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+<div id="ContactForm" class="row">
+    <div class="col-md-6 col-sm-6">
+        <div class="contactFormBody">
+            <!-- Contact form Start-->
+            <h4>Contact N3UG For More Information!!</h4>
+            <form action="Contact" method="post">
+                <div class="form-group">
+                    <label for="FromName">Name</label> <span style="color:red;" class="field-validation-valid" data-valmsg-for="FromName" data-valmsg-replace="true"></span>
+                    <input type="text" class="form-control" id="Name" name="FromName" placeholder="Your Name" data-val="true" data-val-required="*">
+                </div>
+                <div class="form-group">
+                    <label for="FromEmail">Your Email</label> <span style="color:red;" class="field-validation-valid" data-valmsg-for="FromEmail" data-valmsg-replace="true"></span>
+                    <input type="email" class="form-control" id="EmailSubject" name="FromEmail" placeholder="Your Email" data-val="true" data-val-required="*">
+                </div>
+                <div class="form-group">
+                    <label for="Message">Message</label> <span style="color:red;" class="field-validation-valid" data-valmsg-for="Message" data-valmsg-replace="true"></span>
+                    <textarea type="text" class="form-control" id="EMailBody" name="Message" placeholder="Message" data-val="true" data-val-required="*"></textarea>
+                </div>
+                <button id="saveButton" type="submit" class="btn btn-info">Send</button>
+                <button id="clearButton" type="reset" class="btn btn-default">Clear</button>
+                @if (ViewBag.Status != null && ViewBag.Status)
+                {
+                    <script>
+                        $(document).ready(function () {
+                            $('#contactModal').modal('show'); 
+                        });
+                    </script>
+                }
+            </form>
+            <!-- Contact form END-->
+        </div>
+    </div>
+    @*New Jersey Map*@
+    <div class="col-md-6 col-sm-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1563314.4668714805!2d-75.84544686724551!3d40.06763631060869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c0fb959e00409f%3A0x2cd27b07f83f6d8d!2sNew+Jersey!5e0!3m2!1sen!2sus!4v1523541226690" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true" data-keyboard="false">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="contactModalLabel">Sent Successfully</h5>
+            </div>
+            <div class="modal-body">
+                Thank you for contacting us – we will get back to you soon!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal" onclick="location.href='@Url.Action("Index", "Home")';return false;">Close</button>
+                
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
